# knowledge-base-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: policy_with_issues.md
data/contradiction_detection/: mock_atomic_claims_corpus.json  nli_comparison.csv  nli_scores.py  policy_clean.md  user_atomic_claims_doc.json
data/unresolved_content/: dataset.json
experiments/unresolved_content_calibration/: __init__.py  dataset.py  evaluate.py  judge.py  prompts.py
experiments/unresolved_content_calibration/results/: runs.json
src/quality_agent_demo/: __init__.py  __main__.py  app.py  checks.py
tests/: test_agent_helpers.py  test_backend.py
