[project]
name = "quality-agent-demo"
version = "0.1.0"
description = "Knowledge Base QC Agent — minimal demo"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.0.0",
    "openai>=1.30.0",
    "python-fasthtml>=0.6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.2.0",
]

[project.scripts]
quality-agent-demo = "quality_agent_demo.app:main"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quality_agent_demo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
